increase blueprint spawns in beacons, reduce fuel consumption, increase mantis spawns, & stack prime fish and wyvern milk

--- a/pretty/Game.ini
+++ b/pretty/Game.ini
@@ -104,7 +104,7 @@ CropDecaySpeedMultiplier=0
 # This multiplies the speed at which player hair grows.
 HairGrowthSpeedMultiplier=1.0
 # This multiplies the time between fuel consumption ticks.
-FuelConsumptionIntervalMultiplier=1.313000
+FuelConsumptionIntervalMultiplier=100.0
 # Sets the period of time before idle players are kicked, in seconds.
 KickIdlePlayersPeriod=3600
 # Sets the maximum number of players that a tribe can have.
@@ -317,6 +317,169 @@ ConfigAddNPCSpawnEntriesContainer=(
         )
     )
 )
+# MANTIS
+ConfigAddNPCSpawnEntriesContainer=(
+    NPCSpawnEntriesContainerClassString="DinoSpawnEntriesCave1_C",
+    NPCSpawnEntries=(
+        (
+            AnEntryName="MantisSpawns",
+            EntryWeight=0.5,
+            NPCsToSpawnStrings=(
+                "Mantis_Character_BP_C"
+            )
+        )
+    ),
+    NPCSpawnLimits=(
+        (
+            NPCClassString="Mantis_Character_BP_C",
+            MaxPercentageOfDesiredNumToAllow=0.5
+        )
+    )
+)
+ConfigAddNPCSpawnEntriesContainer=(
+    NPCSpawnEntriesContainerClassString="DinoSpawnEntriesCave5_C",
+    NPCSpawnEntries=(
+        (
+            AnEntryName="MantisSpawns",
+            EntryWeight=0.5,
+            NPCsToSpawnStrings=(
+                "Mantis_Character_BP_C"
+            )
+        )
+    ),
+    NPCSpawnLimits=(
+        (
+            NPCClassString="Mantis_Character_BP_C",
+            MaxPercentageOfDesiredNumToAllow=0.5
+        )
+    )
+)
+ConfigAddNPCSpawnEntriesContainer=(
+    NPCSpawnEntriesContainerClassString="DinoSpawnEntriesRedwoodCave_C",
+    NPCSpawnEntries=(
+        (
+            AnEntryName="MantisSpawns",
+            EntryWeight=0.5,
+            NPCsToSpawnStrings=(
+                "Mantis_Character_BP_C"
+            )
+        )
+    ),
+    NPCSpawnLimits=(
+        (
+            NPCClassString="Mantis_Character_BP_C",
+            MaxPercentageOfDesiredNumToAllow=0.5
+        )
+    )
+)
+ConfigAddNPCSpawnEntriesContainer=(
+    NPCSpawnEntriesContainerClassString="DinoSpawnEntriesSwampCave_C",
+    NPCSpawnEntries=(
+        (
+            AnEntryName="MantisSpawns",
+            EntryWeight=0.5,
+            NPCsToSpawnStrings=(
+                "Mantis_Character_BP_C"
+            )
+        )
+    ),
+    NPCSpawnLimits=(
+        (
+            NPCClassString="Mantis_Character_BP_C",
+            MaxPercentageOfDesiredNumToAllow=0.5
+        )
+    )
+)
+ConfigAddNPCSpawnEntriesContainer=(
+    NPCSpawnEntriesContainerClassString="DinoSpawnEntriesTinyCave_C",
+    NPCSpawnEntries=(
+        (
+            AnEntryName="MantisSpawns",
+            EntryWeight=0.5,
+            NPCsToSpawnStrings=(
+                "Mantis_Character_BP_C"
+            )
+        )
+    ),
+    NPCSpawnLimits=(
+        (
+            NPCClassString="Mantis_Character_BP_C",
+            MaxPercentageOfDesiredNumToAllow=0.5
+        )
+    )
+)
+ConfigAddNPCSpawnEntriesContainer=(
+    NPCSpawnEntriesContainerClassString="Fjo_DinoSpawnEntriesErebor_C",
+    NPCSpawnEntries=(
+        (
+            AnEntryName="MantisSpawns",
+            EntryWeight=0.5,
+            NPCsToSpawnStrings=(
+                "Mantis_Character_BP_C"
+            )
+        )
+    ),
+    NPCSpawnLimits=(
+        (
+            NPCClassString="Mantis_Character_BP_C",
+            MaxPercentageOfDesiredNumToAllow=0.5
+        )
+    )
+)
+ConfigAddNPCSpawnEntriesContainer=(
+    NPCSpawnEntriesContainerClassString="Fjordur_DinoSpawnEntriesTinyCave_Pulovia_C",
+    NPCSpawnEntries=(
+        (
+            AnEntryName="MantisSpawns",
+            EntryWeight=0.5,
+            NPCsToSpawnStrings=(
+                "Mantis_Character_BP_C"
+            )
+        )
+    ),
+    NPCSpawnLimits=(
+        (
+            NPCClassString="Mantis_Character_BP_C",
+            MaxPercentageOfDesiredNumToAllow=0.5
+        )
+    )
+)
+ConfigAddNPCSpawnEntriesContainer=(
+    NPCSpawnEntriesContainerClassString="Fjordur_DinoSpawnEntries_Moria_C",
+    NPCSpawnEntries=(
+        (
+            AnEntryName="MantisSpawns",
+            EntryWeight=0.5,
+            NPCsToSpawnStrings=(
+                "Mantis_Character_BP_C"
+            )
+        )
+    ),
+    NPCSpawnLimits=(
+        (
+            NPCClassString="Mantis_Character_BP_C",
+            MaxPercentageOfDesiredNumToAllow=0.5
+        )
+    )
+)
+ConfigAddNPCSpawnEntriesContainer=(
+    NPCSpawnEntriesContainerClassString="Gen1_Volcano_Cave_DinoSpawnEntries_C",
+    NPCSpawnEntries=(
+        (
+            AnEntryName="MantisSpawns",
+            EntryWeight=0.5,
+            NPCsToSpawnStrings=(
+                "Mantis_Character_BP_C"
+            )
+        )
+    ),
+    NPCSpawnLimits=(
+        (
+            NPCClassString="Mantis_Character_BP_C",
+            MaxPercentageOfDesiredNumToAllow=0.5
+        )
+    )
+)
 ;
 ;
 ;
@@ -486,7 +649,15 @@ ConfigOverrideItemMaxQuantity=(
 #                                                                                                  #
 ####################################################################################################
 ConfigOverrideItemMaxQuantity=(
-    ItemClassString="PrimalItemConsumable_RawMeat_Fish_C",
+    ItemClassString="PrimalItemConsumable_RawPrimeMeat_Fish_C",
+    Quantity=(
+        MaxItemQuantity=1000,
+        bIgnoreMultiplier=true
+    )
+)
+# WYVERN MILK - STACK
+ConfigOverrideItemMaxQuantity=(
+    ItemClassString="PrimalItemConsumable_WyvernMilk_C",
     Quantity=(
         MaxItemQuantity=1000,
         bIgnoreMultiplier=true
@@ -815,7 +986,7 @@ ConfigOverrideSupplyCrateItems=(
                     MinQuality=1.0,
                     MaxQuality=1.0,
                     bForceBlueprint=false,
-                    ChanceToBeBlueprintOverride=0.2
+                    ChanceToBeBlueprintOverride=0
                 ),
                 (
                     EntryWeight=1.0,
@@ -830,7 +1001,61 @@ ConfigOverrideSupplyCrateItems=(
                     MinQuality=1.0,
                     MaxQuality=1.0,
                     bForceBlueprint=false,
-                    ChanceToBeBlueprintOverride=0.2
+                    ChanceToBeBlueprintOverride=0
+                )
+            )
+        ),
+        (
+            MinNumItems=3,
+            MaxNumItems=3,
+            NumItemsPower=1.0,
+            SetWeight=0.1,
+            bItemsRandomWithoutReplacement=true,
+            ItemEntries=(
+                (
+                    EntryWeight=1.0,
+                    ItemClassStrings=(
+                        "PrimalItemResource_ElementShard_C"
+                    ),
+                    ItemsWeights=(
+                        1.0
+                    ),
+                    MinQuantity=250.0,
+                    MaxQuantity=500.0,
+                    MinQuality=1.0,
+                    MaxQuality=1.0,
+                    bForceBlueprint=false,
+                    ChanceToBeBlueprintOverride=0
+                ),
+                (
+                    EntryWeight=1.0,
+                    ItemClassStrings=(
+                        "PrimalItemResource_Element_C"
+                    ),
+                    ItemsWeights=(
+                        1.0
+                    ),
+                    MinQuantity=10.0,
+                    MaxQuantity=25.0,
+                    MinQuality=1.0,
+                    MaxQuality=1.0,
+                    bForceBlueprint=false,
+                    ChanceToBeBlueprintOverride=0
+                ),
+                (
+                    EntryWeight=1.0,
+                    ItemClassStrings=(
+                        "PrimalItemResource_Beer_C"
+                    ),
+                    ItemsWeights=(
+                        1.0
+                    ),
+                    MinQuantity=1.0,
+                    MaxQuantity=1.0,
+                    MinQuality=5.0,
+                    MaxQuality=5.0,
+                    bForceBlueprint=true,
+                    ChanceToBeBlueprintOverride=1.0
                 )
             )
         )
@@ -888,6 +1113,60 @@ ConfigOverrideSupplyCrateItems=(
                     ChanceToBeBlueprintOverride=0.2
                 )
             )
+        ),
+        (
+            MinNumItems=3,
+            MaxNumItems=3,
+            NumItemsPower=1.0,
+            SetWeight=0.2,
+            bItemsRandomWithoutReplacement=true,
+            ItemEntries=(
+                (
+                    EntryWeight=1.0,
+                    ItemClassStrings=(
+                        "PrimalItemResource_ElementShard_C"
+                    ),
+                    ItemsWeights=(
+                        1.0
+                    ),
+                    MinQuantity=250.0,
+                    MaxQuantity=1000.0,
+                    MinQuality=1.0,
+                    MaxQuality=1.0,
+                    bForceBlueprint=false,
+                    ChanceToBeBlueprintOverride=0.2
+                ),
+                (
+                    EntryWeight=1.0,
+                    ItemClassStrings=(
+                        "PrimalItemResource_Element_C"
+                    ),
+                    ItemsWeights=(
+                        1.0
+                    ),
+                    MinQuantity=15.0,
+                    MaxQuantity=50.0,
+                    MinQuality=1.0,
+                    MaxQuality=1.0,
+                    bForceBlueprint=false,
+                    ChanceToBeBlueprintOverride=0.2
+                ),
+                (
+                    EntryWeight=1.0,
+                    ItemClassStrings=(
+                        "PrimalItemResource_Beer_C"
+                    ),
+                    ItemsWeights=(
+                        1.0
+                    ),
+                    MinQuantity=1.0,
+                    MaxQuantity=1.0,
+                    MinQuality=5.0,
+                    MaxQuality=5.0,
+                    bForceBlueprint=true,
+                    ChanceToBeBlueprintOverride=1.0
+                )
+            )
         )
     )
 )
@@ -941,6 +1220,60 @@ ConfigOverrideSupplyCrateItems=(
                     MaxQuality=1.0,
                     bForceBlueprint=false,
                     ChanceToBeBlueprintOverride=0.2
+                )
+            )
+        ),
+        (
+            MinNumItems=3,
+            MaxNumItems=3,
+            NumItemsPower=1.0,
+            SetWeight=0.3,
+            bItemsRandomWithoutReplacement=true,
+            ItemEntries=(
+                (
+                    EntryWeight=1.0,
+                    ItemClassStrings=(
+                        "PrimalItemResource_ElementShard_C"
+                    ),
+                    ItemsWeights=(
+                        1.0
+                    ),
+                    MinQuantity=500.0,
+                    MaxQuantity=1000.0,
+                    MinQuality=1.0,
+                    MaxQuality=1.0,
+                    bForceBlueprint=false,
+                    ChanceToBeBlueprintOverride=0.2
+                ),
+                (
+                    EntryWeight=1.0,
+                    ItemClassStrings=(
+                        "PrimalItemResource_Element_C"
+                    ),
+                    ItemsWeights=(
+                        1.0
+                    ),
+                    MinQuantity=20.0,
+                    MaxQuantity=50.0,
+                    MinQuality=1.0,
+                    MaxQuality=1.0,
+                    bForceBlueprint=false,
+                    ChanceToBeBlueprintOverride=0.2
+                ),
+                (
+                    EntryWeight=1.0,
+                    ItemClassStrings=(
+                        "PrimalItemResource_Beer_C"
+                    ),
+                    ItemsWeights=(
+                        1.0
+                    ),
+                    MinQuantity=1.0,
+                    MaxQuantity=1.0,
+                    MinQuality=5.0,
+                    MaxQuality=5.0,
+                    bForceBlueprint=true,
+                    ChanceToBeBlueprintOverride=1.0
                 )
             )
         )
@@ -998,6 +1331,60 @@ ConfigOverrideSupplyCrateItems=(
                     ChanceToBeBlueprintOverride=0.2
                 )
             )
+        ),
+        (
+            MinNumItems=3,
+            MaxNumItems=3,
+            NumItemsPower=1.0,
+            SetWeight=0.4,
+            bItemsRandomWithoutReplacement=true,
+            ItemEntries=(
+                (
+                    EntryWeight=1.0,
+                    ItemClassStrings=(
+                        "PrimalItemResource_ElementShard_C"
+                    ),
+                    ItemsWeights=(
+                        1.0
+                    ),
+                    MinQuantity=500.0,
+                    MaxQuantity=2500.0,
+                    MinQuality=1.0,
+                    MaxQuality=1.0,
+                    bForceBlueprint=false,
+                    ChanceToBeBlueprintOverride=0.2
+                ),
+                (
+                    EntryWeight=1.0,
+                    ItemClassStrings=(
+                        "PrimalItemResource_Element_C"
+                    ),
+                    ItemsWeights=(
+                        1.0
+                    ),
+                    MinQuantity=25.0,
+                    MaxQuantity=50.0,
+                    MinQuality=1.0,
+                    MaxQuality=1.0,
+                    bForceBlueprint=false,
+                    ChanceToBeBlueprintOverride=0.2
+                ),
+                (
+                    EntryWeight=1.0,
+                    ItemClassStrings=(
+                        "PrimalItemResource_Beer_C"
+                    ),
+                    ItemsWeights=(
+                        1.0
+                    ),
+                    MinQuantity=1.0,
+                    MaxQuantity=1.0,
+                    MinQuality=5.0,
+                    MaxQuality=5.0,
+                    bForceBlueprint=true,
+                    ChanceToBeBlueprintOverride=1.0
+                )
+            )
         )
     )
 )
@@ -1051,6 +1438,60 @@ ConfigOverrideSupplyCrateItems=(
                     MaxQuality=1.0,
                     bForceBlueprint=false,
                     ChanceToBeBlueprintOverride=0.2
+                )
+            )
+        ),
+        (
+            MinNumItems=3,
+            MaxNumItems=3,
+            NumItemsPower=1.0,
+            SetWeight=0.5,
+            bItemsRandomWithoutReplacement=true,
+            ItemEntries=(
+                (
+                    EntryWeight=1.0,
+                    ItemClassStrings=(
+                        "PrimalItemResource_ElementShard_C"
+                    ),
+                    ItemsWeights=(
+                        1.0
+                    ),
+                    MinQuantity=1000.0,
+                    MaxQuantity=2500.0,
+                    MinQuality=1.0,
+                    MaxQuality=1.0,
+                    bForceBlueprint=false,
+                    ChanceToBeBlueprintOverride=0.2
+                ),
+                (
+                    EntryWeight=1.0,
+                    ItemClassStrings=(
+                        "PrimalItemResource_Element_C"
+                    ),
+                    ItemsWeights=(
+                        1.0
+                    ),
+                    MinQuantity=30.0,
+                    MaxQuantity=100.0,
+                    MinQuality=1.0,
+                    MaxQuality=1.0,
+                    bForceBlueprint=false,
+                    ChanceToBeBlueprintOverride=0.2
+                ),
+                (
+                    EntryWeight=1.0,
+                    ItemClassStrings=(
+                        "PrimalItemResource_Beer_C"
+                    ),
+                    ItemsWeights=(
+                        1.0
+                    ),
+                    MinQuantity=1.0,
+                    MaxQuantity=1.0,
+                    MinQuality=5.0,
+                    MaxQuality=5.0,
+                    bForceBlueprint=true,
+                    ChanceToBeBlueprintOverride=1.0
                 )
             )
         )
