increase xp rate 4x, crop growth speed 10x, add crabs to the beach, adjust beacon rates to work better with blueprints.

--- a/pretty/Game.ini
+++ b/pretty/Game.ini
@@ -60,7 +60,7 @@ HarvestXPMultiplier=5.0
 # This multiplies the XP gained from crafting.
 CraftXPMultiplier=5.0
 # This multiplies the XP gained from all sources.
-GenericXPMultiplier=5.0
+GenericXPMultiplier=20.0
 # This multiplies the XP gained from special events.
 SpecialXPMultiplier=5.0
 # If set to true, disables the ability to ride dinos.
@@ -92,7 +92,7 @@ BabyImprintingStatScaleMultiplier=10.0
 # This multiplies the damage players deal when harvesting.
 PlayerHarvestingDamageMultiplier=1.0
 # This multiplies the speed at which crops grow.
-CropGrowthSpeedMultiplier=10.0
+CropGrowthSpeedMultiplier=100.0
 # This multiplies the speed at which babies consume food.
 BabyFoodConsumptionSpeedMultiplier=1.0
 # If set to true, allows tribes to declare war on each other in PvE.
@@ -476,6 +476,25 @@ ConfigAddNPCSpawnEntriesContainer=(
     NPCSpawnLimits=(
         (
             NPCClassString="Mantis_Character_BP_C",
+            MaxPercentageOfDesiredNumToAllow=0.5
+        )
+    )
+)
+# KARKINOS
+ConfigAddNPCSpawnEntriesContainer=(
+    NPCSpawnEntriesContainerClassString="DinoSpawnEntriesBeach_C",
+    NPCSpawnEntries=(
+        (
+            AnEntryName="CrabSpawns",
+            EntryWeight=0.5,
+            NPCsToSpawnStrings=(
+                "Crab_Character_BP_C"
+            )
+        )
+    ),
+    NPCSpawnLimits=(
+        (
+            NPCClassString="Crab_Character_BP_C",
             MaxPercentageOfDesiredNumToAllow=0.5
         )
     )
@@ -962,7 +981,7 @@ ConfigOverrideSupplyCrateItems=(
             MinNumItems=2,
             MaxNumItems=2,
             NumItemsPower=1.0,
-            SetWeight=1.0,
+            SetWeight=0.7,
             bItemsRandomWithoutReplacement=true,
             ItemEntries=(
                 (
@@ -1001,7 +1020,7 @@ ConfigOverrideSupplyCrateItems=(
             MinNumItems=3,
             MaxNumItems=3,
             NumItemsPower=1.0,
-            SetWeight=0.1,
+            SetWeight=0.3,
             bItemsRandomWithoutReplacement=true,
             ItemEntries=(
                 (
@@ -1071,7 +1090,7 @@ ConfigOverrideSupplyCrateItems=(
             MinNumItems=2,
             MaxNumItems=2,
             NumItemsPower=1.0,
-            SetWeight=1.0,
+            SetWeight=0.65,
             bItemsRandomWithoutReplacement=true,
             ItemEntries=(
                 (
@@ -1087,7 +1106,7 @@ ConfigOverrideSupplyCrateItems=(
                     MinQuality=1.0,
                     MaxQuality=1.0,
                     bForceBlueprint=false,
-                    ChanceToBeBlueprintOverride=0.2
+                    ChanceToBeBlueprintOverride=0
                 ),
                 (
                     EntryWeight=1.0,
@@ -1102,7 +1121,7 @@ ConfigOverrideSupplyCrateItems=(
                     MinQuality=1.0,
                     MaxQuality=1.0,
                     bForceBlueprint=false,
-                    ChanceToBeBlueprintOverride=0.2
+                    ChanceToBeBlueprintOverride=0
                 )
             )
         ),
@@ -1110,7 +1129,7 @@ ConfigOverrideSupplyCrateItems=(
             MinNumItems=3,
             MaxNumItems=3,
             NumItemsPower=1.0,
-            SetWeight=0.2,
+            SetWeight=0.35,
             bItemsRandomWithoutReplacement=true,
             ItemEntries=(
                 (
@@ -1126,7 +1145,7 @@ ConfigOverrideSupplyCrateItems=(
                     MinQuality=1.0,
                     MaxQuality=1.0,
                     bForceBlueprint=false,
-                    ChanceToBeBlueprintOverride=0.2
+                    ChanceToBeBlueprintOverride=0
                 ),
                 (
                     EntryWeight=1.0,
@@ -1141,7 +1160,7 @@ ConfigOverrideSupplyCrateItems=(
                     MinQuality=1.0,
                     MaxQuality=1.0,
                     bForceBlueprint=false,
-                    ChanceToBeBlueprintOverride=0.2
+                    ChanceToBeBlueprintOverride=0
                 ),
                 (
                     EntryWeight=1.0,
@@ -1180,7 +1199,7 @@ ConfigOverrideSupplyCrateItems=(
             MinNumItems=2,
             MaxNumItems=2,
             NumItemsPower=1.0,
-            SetWeight=1.0,
+            SetWeight=0.6,
             bItemsRandomWithoutReplacement=true,
             ItemEntries=(
                 (
@@ -1196,7 +1215,7 @@ ConfigOverrideSupplyCrateItems=(
                     MinQuality=1.0,
                     MaxQuality=1.0,
                     bForceBlueprint=false,
-                    ChanceToBeBlueprintOverride=0.2
+                    ChanceToBeBlueprintOverride=0
                 ),
                 (
                     EntryWeight=1.0,
@@ -1211,7 +1230,7 @@ ConfigOverrideSupplyCrateItems=(
                     MinQuality=1.0,
                     MaxQuality=1.0,
                     bForceBlueprint=false,
-                    ChanceToBeBlueprintOverride=0.2
+                    ChanceToBeBlueprintOverride=0
                 )
             )
         ),
@@ -1219,7 +1238,7 @@ ConfigOverrideSupplyCrateItems=(
             MinNumItems=3,
             MaxNumItems=3,
             NumItemsPower=1.0,
-            SetWeight=0.3,
+            SetWeight=0.4,
             bItemsRandomWithoutReplacement=true,
             ItemEntries=(
                 (
@@ -1235,7 +1254,7 @@ ConfigOverrideSupplyCrateItems=(
                     MinQuality=1.0,
                     MaxQuality=1.0,
                     bForceBlueprint=false,
-                    ChanceToBeBlueprintOverride=0.2
+                    ChanceToBeBlueprintOverride=0
                 ),
                 (
                     EntryWeight=1.0,
@@ -1250,7 +1269,7 @@ ConfigOverrideSupplyCrateItems=(
                     MinQuality=1.0,
                     MaxQuality=1.0,
                     bForceBlueprint=false,
-                    ChanceToBeBlueprintOverride=0.2
+                    ChanceToBeBlueprintOverride=0
                 ),
                 (
                     EntryWeight=1.0,
@@ -1289,7 +1308,7 @@ ConfigOverrideSupplyCrateItems=(
             MinNumItems=2,
             MaxNumItems=2,
             NumItemsPower=1.0,
-            SetWeight=1.0,
+            SetWeight=0.55,
             bItemsRandomWithoutReplacement=true,
             ItemEntries=(
                 (
@@ -1305,7 +1324,7 @@ ConfigOverrideSupplyCrateItems=(
                     MinQuality=1.0,
                     MaxQuality=1.0,
                     bForceBlueprint=false,
-                    ChanceToBeBlueprintOverride=0.2
+                    ChanceToBeBlueprintOverride=0
                 ),
                 (
                     EntryWeight=1.0,
@@ -1320,7 +1339,7 @@ ConfigOverrideSupplyCrateItems=(
                     MinQuality=1.0,
                     MaxQuality=1.0,
                     bForceBlueprint=false,
-                    ChanceToBeBlueprintOverride=0.2
+                    ChanceToBeBlueprintOverride=0
                 )
             )
         ),
@@ -1328,7 +1347,7 @@ ConfigOverrideSupplyCrateItems=(
             MinNumItems=3,
             MaxNumItems=3,
             NumItemsPower=1.0,
-            SetWeight=0.4,
+            SetWeight=0.45,
             bItemsRandomWithoutReplacement=true,
             ItemEntries=(
                 (
@@ -1344,7 +1363,7 @@ ConfigOverrideSupplyCrateItems=(
                     MinQuality=1.0,
                     MaxQuality=1.0,
                     bForceBlueprint=false,
-                    ChanceToBeBlueprintOverride=0.2
+                    ChanceToBeBlueprintOverride=0
                 ),
                 (
                     EntryWeight=1.0,
@@ -1359,7 +1378,7 @@ ConfigOverrideSupplyCrateItems=(
                     MinQuality=1.0,
                     MaxQuality=1.0,
                     bForceBlueprint=false,
-                    ChanceToBeBlueprintOverride=0.2
+                    ChanceToBeBlueprintOverride=0
                 ),
                 (
                     EntryWeight=1.0,
@@ -1398,7 +1417,7 @@ ConfigOverrideSupplyCrateItems=(
             MinNumItems=2,
             MaxNumItems=2,
             NumItemsPower=1.0,
-            SetWeight=1.0,
+            SetWeight=0.5,
             bItemsRandomWithoutReplacement=true,
             ItemEntries=(
                 (
@@ -1414,7 +1433,7 @@ ConfigOverrideSupplyCrateItems=(
                     MinQuality=1.0,
                     MaxQuality=1.0,
                     bForceBlueprint=false,
-                    ChanceToBeBlueprintOverride=0.2
+                    ChanceToBeBlueprintOverride=0
                 ),
                 (
                     EntryWeight=1.0,
@@ -1429,7 +1448,7 @@ ConfigOverrideSupplyCrateItems=(
                     MinQuality=1.0,
                     MaxQuality=1.0,
                     bForceBlueprint=false,
-                    ChanceToBeBlueprintOverride=0.2
+                    ChanceToBeBlueprintOverride=0
                 )
             )
         ),
@@ -1453,7 +1472,7 @@ ConfigOverrideSupplyCrateItems=(
                     MinQuality=1.0,
                     MaxQuality=1.0,
                     bForceBlueprint=false,
-                    ChanceToBeBlueprintOverride=0.2
+                    ChanceToBeBlueprintOverride=0
                 ),
                 (
                     EntryWeight=1.0,
@@ -1468,7 +1487,7 @@ ConfigOverrideSupplyCrateItems=(
                     MinQuality=1.0,
                     MaxQuality=1.0,
                     bForceBlueprint=false,
-                    ChanceToBeBlueprintOverride=0.2
+                    ChanceToBeBlueprintOverride=0
                 ),
                 (
                     EntryWeight=1.0,
@@ -1500,15 +1519,15 @@ ConfigOverrideSupplyCrateItems=(
     SupplyCrateClassString="SupplyCrate_Level60_C",
     MinItemSets=1,
     MaxItemSets=1,
-    NumItemSetsPower=1.0,
-    bSetsRandomWithoutReplacement=true,
+    NumItemSetsPower=5.0,
+    bSetsRandomWithoutReplacement=false,
     ItemSets=(
         (
             MinNumItems=50,
             MaxNumItems=50,
             NumItemsPower=1.0,
             SetWeight=1.0,
-            bItemsRandomWithoutReplacement=true,
+            bItemsRandomWithoutReplacement=false,
             ItemEntries=(
                 (
                     EntryWeight=1.0,
