--- a/pretty/Game.ini
+++ b/pretty/Game.ini
@@ -486,7 +486,7 @@ ConfigAddNPCSpawnEntriesContainer=(
     NPCSpawnEntries=(
         (
             AnEntryName="CrabSpawns",
-            EntryWeight=0.5,
+            EntryWeight=0.25,
             NPCsToSpawnStrings=(
                 "Crab_Character_BP_C"
             )
@@ -495,7 +495,7 @@ ConfigAddNPCSpawnEntriesContainer=(
     NPCSpawnLimits=(
         (
             NPCClassString="Crab_Character_BP_C",
-            MaxPercentageOfDesiredNumToAllow=0.5
+            MaxPercentageOfDesiredNumToAllow=0.1
         )
     )
 )
@@ -981,7 +981,7 @@ ConfigOverrideSupplyCrateItems=(
             MinNumItems=2,
             MaxNumItems=2,
             NumItemsPower=1.0,
-            SetWeight=0.7,
+            SetWeight=1.0,
             bItemsRandomWithoutReplacement=true,
             ItemEntries=(
                 (
@@ -1013,60 +1013,6 @@ ConfigOverrideSupplyCrateItems=(
                     MaxQuality=1.0,
                     bForceBlueprint=false,
                     ChanceToBeBlueprintOverride=0
-                )
-            )
-        ),
-        (
-            MinNumItems=3,
-            MaxNumItems=3,
-            NumItemsPower=1.0,
-            SetWeight=0.3,
-            bItemsRandomWithoutReplacement=true,
-            ItemEntries=(
-                (
-                    EntryWeight=1.0,
-                    ItemClassStrings=(
-                        "PrimalItemResource_ElementShard_C"
-                    ),
-                    ItemsWeights=(
-                        1.0
-                    ),
-                    MinQuantity=250.0,
-                    MaxQuantity=500.0,
-                    MinQuality=1.0,
-                    MaxQuality=1.0,
-                    bForceBlueprint=false,
-                    ChanceToBeBlueprintOverride=0
-                ),
-                (
-                    EntryWeight=1.0,
-                    ItemClassStrings=(
-                        "PrimalItemResource_Element_C"
-                    ),
-                    ItemsWeights=(
-                        1.0
-                    ),
-                    MinQuantity=10.0,
-                    MaxQuantity=25.0,
-                    MinQuality=1.0,
-                    MaxQuality=1.0,
-                    bForceBlueprint=false,
-                    ChanceToBeBlueprintOverride=0
-                ),
-                (
-                    EntryWeight=1.0,
-                    ItemClassStrings=(
-                        "PrimalItemResource_Beer_C"
-                    ),
-                    ItemsWeights=(
-                        1.0
-                    ),
-                    MinQuantity=1.0,
-                    MaxQuantity=1.0,
-                    MinQuality=5.0,
-                    MaxQuality=5.0,
-                    bForceBlueprint=true,
-                    ChanceToBeBlueprintOverride=1.0
                 )
             )
         )
@@ -1133,7 +1079,7 @@ ConfigOverrideSupplyCrateItems=(
             bItemsRandomWithoutReplacement=true,
             ItemEntries=(
                 (
-                    EntryWeight=1.0,
+                    EntryWeight=100.0,
                     ItemClassStrings=(
                         "PrimalItemResource_ElementShard_C"
                     ),
@@ -1148,7 +1094,7 @@ ConfigOverrideSupplyCrateItems=(
                     ChanceToBeBlueprintOverride=0
                 ),
                 (
-                    EntryWeight=1.0,
+                    EntryWeight=100.0,
                     ItemClassStrings=(
                         "PrimalItemResource_Element_C"
                     ),
@@ -1163,16 +1109,76 @@ ConfigOverrideSupplyCrateItems=(
                     ChanceToBeBlueprintOverride=0
                 ),
                 (
-                    EntryWeight=1.0,
+                    EntryWeight=0.1,
                     ItemClassStrings=(
-                        "PrimalItemResource_Beer_C"
+                        "PrimalItem_ChainSaw_C"
                     ),
                     ItemsWeights=(
                         1.0
                     ),
                     MinQuantity=1.0,
                     MaxQuantity=1.0,
-                    MinQuality=5.0,
+                    MinQuality=1.0,
+                    MaxQuality=5.0,
+                    bForceBlueprint=true,
+                    ChanceToBeBlueprintOverride=1.0
+                ),
+                (
+                    EntryWeight=0.1,
+                    ItemClassStrings=(
+                        "PrimalItem_WeaponMetalHatchet_C"
+                    ),
+                    ItemsWeights=(
+                        1.0
+                    ),
+                    MinQuantity=1.0,
+                    MaxQuantity=1.0,
+                    MinQuality=1.0,
+                    MaxQuality=5.0,
+                    bForceBlueprint=true,
+                    ChanceToBeBlueprintOverride=1.0
+                ),
+                (
+                    EntryWeight=0.1,
+                    ItemClassStrings=(
+                        "PrimalItem_WeaponMetalPick_C"
+                    ),
+                    ItemsWeights=(
+                        1.0
+                    ),
+                    MinQuantity=1.0,
+                    MaxQuantity=1.0,
+                    MinQuality=1.0,
+                    MaxQuality=5.0,
+                    bForceBlueprint=true,
+                    ChanceToBeBlueprintOverride=1.0
+                ),
+                (
+                    EntryWeight=0.1,
+                    ItemClassStrings=(
+                        "PrimalItem_WeaponSickle_C"
+                    ),
+                    ItemsWeights=(
+                        1.0
+                    ),
+                    MinQuantity=1.0,
+                    MaxQuantity=1.0,
+                    MinQuality=1.0,
+                    MaxQuality=5.0,
+                    bForceBlueprint=true,
+                    ChanceToBeBlueprintOverride=1.0
+                )
+                (
+                    EntryWeight=0.1,
+                    ItemClassStrings=(
+                        "PrimalItem_WeaponMiningDrill_C"
+                    ),
+                    ItemsWeights=(
+                        1.0
+                    ),
+                    MinQuantity=1.0,
+                    MaxQuantity=1.0,
+                    MinQuality=1.0,
                     MaxQuality=5.0,
                     bForceBlueprint=true,
                     ChanceToBeBlueprintOverride=1.0
