add stone tools to the blue beacon for funzies.

--- a/pretty/Game.ini
+++ b/pretty/Game.ini
@@ -2713,6 +2713,36 @@ ConfigOverrideSupplyCrateItems=(
                     MaxQuality=5.0,
                     bForceBlueprint=true,
                     ChanceToBeBlueprintOverride=1.0
+                ),
+                (
+                    EntryWeight=0.1,
+                    ItemClassStrings=(
+                        "PrimalItem_WeaponStoneHatchet_C"
+                    ),
+                    ItemsWeights=(
+                        1.0
+                    ),
+                    MinQuantity=1.0,
+                    MaxQuantity=1.0,
+                    MinQuality=1.0,
+                    MaxQuality=5.0,
+                    bForceBlueprint=true,
+                    ChanceToBeBlueprintOverride=1.0
+                ),
+                (
+                    EntryWeight=0.1,
+                    ItemClassStrings=(
+                        "PrimalItem_WeaponStonePick_C"
+                    ),
+                    ItemsWeights=(
+                        1.0
+                    ),
+                    MinQuantity=1.0,
+                    MaxQuantity=1.0,
+                    MinQuality=1.0,
+                    MaxQuality=5.0,
+                    bForceBlueprint=true,
+                    ChanceToBeBlueprintOverride=1.0
                 )
             )
         )
