--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
-server/dist/
-server/node_modules/
-server/src/minified/
+# default ignores
+dist/
+node_modules/
+
+# special cases
+src/assets/images/alts/
+src/assets/images/cards/
+src/assets/images/icons/
+src/assets/creatures.json
